# Chess-Game

./: .gitignore  CMakeLists.txt  Chess.out  README.md  bishop.cpp  bishop.h  blank.h  board.cpp  board.h  engine.cpp  engine.h  game.cpp  game.h  king.cpp  king.h  knight.cpp  knight.h  main.cpp  pawn.cpp  pawn.h  piece.cpp  piece.h  queen.h  rook.cpp  rook.h  tasks.txt  window.cpp  window.h
engine/: engine.cpp  engine.h
game_system/: board.cpp  game.cpp  game.h
gui/: window.cpp  window.h
pieces/: king.h  knight.h  piece.h  queen.cpp  queen.h  rook.h
